<resources>

    <!--***** GENERAL *****-->
    <!-- a string resource to describe the "open drawer" action for accessibility-->
    <string name="drawer_open">Open navigation drawer</string>
    <!-- a String resource to describe the "close drawer" action for accessibility-->
    <string name="drawer_close">Close navigation drawer</string>

    <string name="facebook_app_id">983836471688686</string>
    <string name="two">TWO</string>
    <string name="three">THREE</string>

    <!--***** MAIN_ACTIVITY *****-->
    <!-- application name -->
    <string name="app_name">RoomMates</string>
    <!-- application description -->
    <string name="app_description">Smart Household Management</string>
    <string name="facebook_login">Login with Facebook</string>

    <!--***** SET_USER_APARTMENT *****-->
    <!-- app_main_screen title with name-->
    <string name="join_new_app_title">Welcome</string>
    <!-- description-->
    <string name="new_or_existing_app">Apartment is where you live, work and play</string>
    <!-- instructions what to do-->
    <string name="choose_app">Add Your First Apartment</string>
    <!-- text field hint when user choose to create new apartment-->
    <string name="app_name_hint">Enter apartment name here</string>
    <!-- button the user click on when creating new apartment-->
    <string name="create_new_app">Create New Apartment</string>
    <!-- text field hint when user joins existing apartment-->
    <string name="app_id_hint">Enter apartment ID here</string>
    <!-- button the user click on when joining existing apartment-->
    <string name="join_new_app">Join Existing Apartment</string>

    <!--***** NAV_HEADER *****-->
    <!-- text view with the name of the user-->
    <string name="profile_name">Alma Shalom</string>
    <!-- text view with the apartment id of the user-->
    <string name="profile_apartment_id">1234567</string>
    <!-- text view with mail of the user-->
    <string name="profile_email">AlmaShalom@yahoo.com</string>

    <!--***** FIRST_FRAGMENT ***** -->
    <!-- text view with the text inside fragment-->
    <string name="one">ONE</string>

    <!-- MENU_MAIN-->
    <!-- menu item of settings-->
    <string name="action_settings">Settings</string>
    <!-- menu item of logout-->
    <string name="action_logout">Logout</string>

    <!-- SHOPPING LIST -->
    <string name="add_to_list">Add a product </string>
    <string name="deleted_successfuly">deleted succsefully</string>
    <string name="undo">undo</string>
</resources>
