<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:background="@drawable/open_bg2"
    android:elevation="4dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/join_new_app_title"
        android:id="@+id/welcome"
        android:textSize="35sp"
        android:textColor="#fffad5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/new_or_existing_app"
        android:id="@+id/textView5"
        android:textSize="28sp"
        android:textIsSelectable="false"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="#fffad5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/choose_app"
        android:id="@+id/textView6"
        android:layout_marginTop="15dp"
        android:textSize="25sp"
        style="@style/AddApartmentTextStyle"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/new_app_text_field"
        android:hint="@string/app_name_hint"
        android:layout_marginTop="40dp"
        android:textColor="#fffad5"
        android:textColorHint="#90fffad5" />

    <Button
        android:layout_width="@dimen/choose_add_apartment_button"
        android:layout_height="wrap_content"
        android:text="@string/create_new_app"
        android:id="@+id/new_app_button"
        android:allowUndo="false"
        android:background="#fffad5"
        android:alpha="0.9"
        android:textColor="#212121"
        android:elevation="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/join_app_text_field"
        android:hint="@string/app_id_hint"
        android:layout_marginTop="40dp"
        android:textColor="#fffad5"
        android:textColorHint="#90fffad5" />

    <Button
        android:layout_width="@dimen/choose_add_apartment_button"
        android:layout_height="wrap_content"
        android:text="@string/join_new_app"
        android:id="@+id/join_app_button"
        android:background="#fffad5"
        android:alpha="0.9"
        android:textColor="#212121"
        android:elevation="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/error_text_field"
        android:layout_marginTop="45sp" />

</LinearLayout>